<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.activities.EditListActivity">
    <item
        android:id="@+id/ed_list_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/ed_list_add_item"
        android:icon="@drawable/ic_add_item_white"
        app:showAsAction="always"
        android:title="@string/main_list_add_item" />
    <item
        android:id="@+id/ed_list_del_items"
        android:orderInCategory="100"
        android:title="@string/ed_list_del_items"
        android:icon="@drawable/ic_del_items_white"
        app:showAsAction="always" />
    <item
        android:id="@+id/ed_list_del_list"
        android:orderInCategory="100"
        android:title="@string/ed_list_del_list"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="always" />
</menu>
